--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arav Panwar</title>
+    <title>Mahesh Files</title>
     <style>
         body {
             font-family: "Verdana", sans-serif;
@@ -92,7 +92,8 @@
 
     <p>
         <strong>WEBSITE NOT FOR SALE</strong>. <br>
-        "Adjust to new times buddy bahahahahahahaha the domain is mine now" - Arav Panwar, February 2026
+        "Adjust to new times buddy bahahahahahahaha the domain is mine now"
+        - Arav Panwar, February 2026
     </p>
 
 
