Minor Deployment Fixes

--- a/index.html
+++ b/index.html
@@ -87,18 +87,17 @@
 
     <header>
         <h1>Mahesh Soni</h1>
-        <div class="subtitle">did somebody say minor?</div>
+        <div class="subtitle">Did somebody say minor?</div>
     </header>
 
     <p>
         <strong>WEBSITE NOT FOR SALE</strong>. <br>
-        "Adjust to new times buddy bahahahahahahaha the domain is mine now"
-        - Arav Panwar, February 2026
+        "Adjust to new times buddy bahahahahahahaha the domain is mine now" - Arav Panwar, February 2026
     </p>
 
 
     <footer>
-        Last updated: 2026-02-09
+        Last updated: 2026-02-09 22:57
     </footer>
 
 </body>
